--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   postgres:
-    image: postgres:13
+    image: postgres:alpine
     environment:
       POSTGRES_DB: tasks
       POSTGRES_USER: postgres
