Update backend and frontend images to specific versions; modify service types and selectors for both services

--- a/kubernetes/backend-deployment.yaml
+++ b/kubernetes/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: go-app-backend:latest
+        image: abrhman/simple-go-backend:v1
         ports:
         - containerPort: 8080
         env:
