--- a/kubernetes/frontend-deployment.yaml
+++ b/kubernetes/frontend-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: go-app-frontend:latest
+        image: abrhman/simple-go-frontend:v1
         ports:
         - containerPort: 80
