--- a/kubernetes/postgres-service.yaml
+++ b/kubernetes/postgres-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: postgres
 spec:
   type: ClusterIP
   ports:
-    - port: 8080
-      targetPort: 8080
+    - port: 5432
+      targetPort: 5432
   selector:
-    app: backend
+    app: postgres 
