--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,17 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   backend:
-    build: ./backend
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
+    image: abrhman/simple-go-backend:v1
     ports:
       - "8080:8080"
     environment:
@@ -21,14 +29,21 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
 
   frontend:
-    build: ./frontend
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    image: abrhman/simple-go-frontend:v1
     ports:
       - "80:80"
     depends_on:
-      - backend
+      backend:
+        condition: service_started
+    restart: unless-stopped
 
 volumes:
   postgres-data:
