--- a/kubernetes/configmap.yaml
+++ b/kubernetes/configmap.yaml
@@ -4,5 +4,5 @@ metadata:
   name: app-config
 data:
   POSTGRES_DB: "tasks"
-  POSTGRES_HOST: "postgres-service"
+  POSTGRES_HOST: "postgres"
   PORT: "8080" 
