build(ansible): add Ansible configuration and roles for Docker setup

--- a/kubernetes/secret.yaml
+++ b/kubernetes/secret.yaml
@@ -4,6 +4,5 @@ metadata:
   name: db-secrets
 type: Opaque
 data:
-  # These values are base64 encoded
-  postgres-user: cG9zdGdyZXM=     # 'postgres' in base64
-  postgres-password: cG9zdGdyZXM=  # 'postgres' in base64 
+  postgres-user: cG9zdGdyZXM=
+  postgres-password: cG9zdGdyZXM=
