--- a/kubernetes/backend-deployment.yaml
+++ b/kubernetes/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: abrhman/simple-go-backend:v1
+        image: abrhman/simple-go-backend:latest
         ports:
         - containerPort: 8080
         resources:
