--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [ec2]
-13.219.242.19 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ab-rhman/simple-go/.etc/web.pem
+<your-ec2-public-ip> ansible_user=ubuntu ansible_ssh_private_key_file=<path-to-your-pem-file>
